# hunter-bot

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  compose.yaml  main.py  pyproject.toml  requirements.txt
bot/: core.py  error.py  hunter.py  persistent_store.py  prefix.py  snowflake.py  utils.py
bot/cogs/: __init__.py  general.py  hunter.py
bot/models/: __init__.py  core.py  ping.py
